--- a/slide7.html
+++ b/slide7.html
@@ -144,6 +144,7 @@
         .text-gradient {
             background: linear-gradient(to right, #00f7ff, #ffffff);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
     </style>
