--- a/slide6.html
+++ b/slide6.html
@@ -388,7 +388,7 @@
         // Navigation
         document.addEventListener('keydown', (e) => {
             if (e.code === 'ArrowLeft') window.location.href = 'slide5.html';
-            if (['ArrowRight', 'Space', 'Enter'].includes(e.code)) window.location.href = 'slide1.html'; // Loop back to start for now
+            if (['ArrowRight', 'Space', 'Enter'].includes(e.code)) window.location.href = 'slide7.html';
         });
     </script>
 </body>
