--- a/slide7.html
+++ b/slide7.html
@@ -69,61 +69,6 @@
             }
         }
 
-        /* --- GLASS CARDS --- */
-        .tech-card {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 16px;
-            transition: all 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
-            opacity: 0;
-            transform: translateY(20px);
-            animation: float-in 1s ease-out forwards;
-        }
-
-        .tech-card:hover {
-            transform: translateY(-10px) scale(1.05);
-            background: rgba(255, 255, 255, 0.08);
-            border-color: rgba(255, 255, 255, 0.3);
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
-        }
-
-        @keyframes float-in {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Continuous Float */
-        .floating {
-            animation: hover-float 4s ease-in-out infinite;
-        }
-
-        .floating-delay-1 {
-            animation-delay: 1s;
-        }
-
-        .floating-delay-2 {
-            animation-delay: 2s;
-        }
-
-        .floating-delay-3 {
-            animation-delay: 3s;
-        }
-
-        @keyframes hover-float {
-
-            0%,
-            100% {
-                transform: translateY(0);
-            }
-
-            50% {
-                transform: translateY(-10px);
-            }
-        }
-
         /* --- TYPOGRAPHY --- */
         .cinematic-text span {
             display: inline-block;
@@ -140,12 +85,22 @@
             }
         }
 
-        /* Brand Gradient */
         .text-gradient {
             background: linear-gradient(to right, #00f7ff, #ffffff);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
+        }
+
+        .glass-badge {
+            backdrop-filter: blur(5px);
+            transition: all 0.3s;
+        }
+
+        .glass-badge:hover {
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateY(-2px);
+            border-color: rgba(255, 255, 255, 0.3);
         }
     </style>
 </head>
@@ -156,73 +111,63 @@
     <div id="stars" class="starfield"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="relative z-10 w-full max-w-7xl flex flex-col items-center justify-center gap-16">
+    <main class="relative z-10 w-full max-w-7xl h-full flex flex-col items-center justify-center p-10">
 
-        <!-- TECH STACK (Top) -->
-        <div class="grid grid-cols-4 gap-8 w-full px-10">
-
-            <!-- Python -->
-            <div class="tech-card p-6 flex flex-col items-center justify-center h-48 floating"
-                style="animation-delay: 0.2s;">
-                <svg class="w-16 h-16 mb-4 filter drop-shadow-lg" viewBox="0 0 128 128">
-                    <path fill="#FFD43B"
-                        d="M64 12c-15 0-24 7-24 17H25v17h46v5H29c-16 0-29 13-29 29s13 29 29 29h7V94h-5c-7 0-12-5-12-12s5-12 12-12h27c15 0 24-7 24-17V36c0-16-13-29-29-29zm-9 19c3 0 6 3 6 6s-3 6-6 6-6-3-6-6 3-6 6-6z" />
-                    <path fill="#3776AB"
-                        d="M64 116c15 0 24-7 24-17V82h15V65H57v-5h42c16 0 29-13 29-29S115 2 99 2h-7v15h5c7 0 12 5 12 12s-5 12-12 12H70c-15 0-24 7-24 17v17c0 16 13 29 29 29zm9-19c-3 0-6-3-6-6s3-6 6-6 6 3 6 6-3 6-6 6z" />
-                </svg>
-                <h3 class="font-orbitron font-bold text-lg text-yellow-400">INGESTION</h3>
-                <p class="font-rajdhani text-sm text-gray-400 mt-1">Python & Selenium</p>
-            </div>
-
-            <!-- Gemini -->
-            <div class="tech-card p-6 flex flex-col items-center justify-center h-48 floating floating-delay-1"
-                style="animation-delay: 0.4s;">
-                <svg class="w-16 h-16 mb-4 filter drop-shadow-[0_0_15px_rgba(6,182,212,0.5)]" viewBox="0 0 24 24"
-                    fill="none" stroke="#00f7ff" stroke-width="1.5">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
-                </svg>
-                <h3 class="font-orbitron font-bold text-lg text-cyan-400">INTELLIGENCE</h3>
-                <p class="font-rajdhani text-sm text-gray-400 mt-1">Gemini 1.5 Pro</p>
-            </div>
-
-            <!-- Polygon -->
-            <div class="tech-card p-6 flex flex-col items-center justify-center h-48 floating floating-delay-2"
-                style="animation-delay: 0.6s;">
-                <svg class="w-14 h-14 mb-6 filter drop-shadow-[0_0_15px_rgba(168,85,247,0.5)]" viewBox="0 0 24 24"
-                    fill="#a855f7">
-                    <path d="M16.5 12.5L12 15L7.5 12.5V7.5L12 5L16.5 7.5V12.5Z" stroke="white" stroke-width="1.5"
-                        stroke-linejoin="round" />
-                    <path d="M12 2L2 7l10 5 10-5-10-5zm0 9l2-1 8 4-10 5-10-5 8-4 2 1z" opacity="0.5" />
-                </svg>
-                <h3 class="font-orbitron font-bold text-lg text-purple-400">TRUST</h3>
-                <p class="font-rajdhani text-sm text-gray-400 mt-1">Polygon PoS</p>
-            </div>
-
-            <!-- Next.js -->
-            <div class="tech-card p-6 flex flex-col items-center justify-center h-48 floating floating-delay-3"
-                style="animation-delay: 0.8s;">
-                <svg class="w-16 h-16 mb-4 filter drop-shadow-lg" viewBox="0 0 128 128">
-                    <path fill="white"
-                        d="M64 0C28.7 0 0 28.7 0 64s28.7 64 64 64 64-28.7 64-64S99.3 0 64 0zm0 121.6C32.2 121.6 6.4 95.8 6.4 64S32.2 6.4 64 6.4s57.6 25.8 57.6 57.6-25.8 57.6-57.6 57.6zM96.4 91.2V36.8h-6.4v40.3L50.9 36.8H42v54.4h6.4v-39l38.4 40.3c2.7-1 5.4-2.2 8-3.6z" />
-                </svg>
-                <h3 class="font-orbitron font-bold text-lg text-gray-200">EXPERIENCE</h3>
-                <p class="font-rajdhani text-sm text-gray-400 mt-1">Next.js & React</p>
-            </div>
-        </div>
-
-        <!-- THE VISION (Bottom) -->
-        <div class="text-center mt-10">
-            <h1 class="text-4xl md:text-6xl font-orbitron font-black text-transparent bg-clip-text bg-gradient-to-b from-white to-gray-500 mb-6 cinematic-text leading-tight"
+        <!-- THE VISION (Hero Center) -->
+        <div class="flex-1 flex flex-col items-center justify-center text-center">
+            <h1 class="text-4xl md:text-7xl font-orbitron font-black text-transparent bg-clip-text bg-gradient-to-b from-white to-gray-400 mb-8 cinematic-text leading-tight drop-shadow-[0_0_25px_rgba(255,255,255,0.3)]"
                 id="main-title">
                 BUILDING THE IMMUNE SYSTEM<br>OF THE INTERNET
             </h1>
-            <p class="text-xl md:text-2xl font-rajdhani text-gray-500 tracking-[0.5em] uppercase opacity-0"
+            <p class="text-xl md:text-3xl font-rajdhani text-cyan-500 tracking-[0.6em] uppercase opacity-0"
                 id="sub-title" style="transition: opacity 2s ease 2s;">
                 TRU Protocol © 2025
             </p>
         </div>
 
+        <!-- TECH STACK (Bottom Badges) -->
+        <div
+            class="w-full flex flex-wrap justify-center gap-6 mt-auto pb-10 opacity-70 hover:opacity-100 transition-opacity duration-500">
+
+            <!-- Python -->
+            <div class="glass-badge flex items-center gap-3 px-5 py-2 rounded-full bg-white/5 border border-white/10">
+                <svg class="w-5 h-5" viewBox="0 0 128 128">
+                    <path fill="#FFD43B"
+                        d="M64 12c-15 0-24 7-24 17H25v17h46v5H29c-16 0-29 13-29 29s13 29 29 29h7V94h-5c-7 0-12-5-12-12s5-12 12-12h27c15 0 24-7 24-17V36c0-16-13-29-29-29zm-9 19c3 0 6 3 6 6s-3 6-6 6-6-3-6-6 3-6 6-6z" />
+                    <path fill="#3776AB"
+                        d="M64 116c15 0 24-7 24-17V82h15V65H57v-5h42c16 0 29-13 29-29S115 2 99 2h-7v15h5c7 0 12 5 12 12s-5 12-12 12H70c-15 0-24 7-24 17v17c0 16 13 29 29 29zm9-19c-3 0-6-3-6-6s3-6 6-6 6 3 6 6-3 6-6 6z" />
+                </svg>
+                <span class="font-bold text-gray-400 text-[10px] md:text-xs tracking-wider">INGESTION</span>
+            </div>
+
+            <!-- Gemini -->
+            <div class="glass-badge flex items-center gap-3 px-5 py-2 rounded-full bg-white/5 border border-white/10">
+                <svg class="w-5 h-5 text-cyan-400" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
+                </svg>
+                <span class="font-bold text-gray-400 text-[10px] md:text-xs tracking-wider">INTELLIGENCE</span>
+            </div>
+
+            <!-- Polygon -->
+            <div class="glass-badge flex items-center gap-3 px-5 py-2 rounded-full bg-white/5 border border-white/10">
+                <svg class="w-5 h-5 text-purple-500" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 2L2 7l10 5 10-5-10-5zm0 9l2-1 8 4-10 5-10-5 8-4 2 1z" />
+                </svg>
+                <span class="font-bold text-gray-400 text-[10px] md:text-xs tracking-wider">TRUST</span>
+            </div>
+
+            <!-- Next.js -->
+            <div class="glass-badge flex items-center gap-3 px-5 py-2 rounded-full bg-white/5 border border-white/10">
+                <svg class="w-5 h-5 text-white" viewBox="0 0 128 128">
+                    <path fill="currentColor"
+                        d="M64 0C28.7 0 0 28.7 0 64s28.7 64 64 64 64-28.7 64-64S99.3 0 64 0zm0 121.6C32.2 121.6 6.4 95.8 6.4 64S32.2 6.4 64 6.4s57.6 25.8 57.6 57.6-25.8 57.6-57.6 57.6zM96.4 91.2V36.8h-6.4v40.3L50.9 36.8H42v54.4h6.4v-39l38.4 40.3c2.7-1 5.4-2.2 8-3.6z" />
+                </svg>
+                <span class="font-bold text-gray-400 text-[10px] md:text-xs tracking-wider">EXPERIENCE</span>
+            </div>
+
+        </div>
     </main>
 
     <script>
@@ -247,10 +192,7 @@
             star.style.transform = `translate3d(${x}px, ${y}px, 0)`;
             star.style.animationDelay = delay + 's';
 
-            // Custom animation path for warp effect logic simulation via simple CSS
-            // Actually CSS keyframes handles the Z-depth which creates the warp look
-
-            // Adjust margin to offset from center
+            // Simple warp effect margin adjustment
             star.style.marginLeft = x + 'px';
             star.style.marginTop = y + 'px';
 
@@ -259,20 +201,17 @@
 
         // --- Text Animation Splitter ---
         const title = document.getElementById('main-title');
-        const text = title.innerText; // Get raw text
-        title.innerHTML = ''; // Clear
+        const text = title.innerText;
+        title.innerHTML = '';
 
-        // Split by lines first if needed, but simple char split works for fade
-        // We need to preserve line breaks
         const lines = text.split('\n');
 
         lines.forEach((line, lineIndex) => {
             const lineDiv = document.createElement('div');
             line.split('').forEach((char, charIndex) => {
                 const span = document.createElement('span');
-                span.innerText = char === ' ' ? '\u00A0' : char; // Preserve space
-                // Stagger delay
-                span.style.animationDelay = (2.5 + (lineIndex * 0.5) + (charIndex * 0.05)) + 's';
+                span.innerText = char === ' ' ? '\u00A0' : char;
+                span.style.animationDelay = (0.5 + (lineIndex * 0.5) + (charIndex * 0.05)) + 's'; // Faster start
                 lineDiv.appendChild(span);
             });
             title.appendChild(lineDiv);
@@ -281,12 +220,12 @@
         // Trigger Subtitle
         setTimeout(() => {
             document.getElementById('sub-title').style.opacity = '1';
-        }, 5000);
+        }, 3500); // Earlier
 
         // --- Navigation ---
         document.addEventListener('keydown', (e) => {
             if (e.code === 'ArrowLeft') window.location.href = 'slide6.html';
-            if (['ArrowRight', 'Space', 'Enter'].includes(e.code)) window.location.href = 'slide1.html'; // Loop back to start
+            if (['ArrowRight', 'Space', 'Enter'].includes(e.code)) window.location.href = 'slide1.html';
         });
 
     </script>
